<resources>
    <string name="app_name">Diu</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="phone">电话</string>
    <string name="avatar">头像</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="eat">吃饭啦！</string>
</resources>
